# MCDeploy

./: .gitignore  CMakeLists.txt  NETLIFY_BACKEND_MIGRATION.md  README.md  config.example.json  vcpkg.json
MCDeploy/resources/: generate_icon.ps1  mcdeploy.rc
MCDeploy/src/: main.cpp
MCDeploy/src/ai/: AIAgent.cpp  AIAgent.h
MCDeploy/src/controllers/: AIEditorController.cpp  AIEditorController.h  AnalyticsController.cpp  AnalyticsController.h  ConsoleController.h  DashboardController.cpp  DashboardController.h  MembersController.cpp  MembersController.h  MonitorController.h  PlayerController.h  ScheduleController.cpp  ScheduleController.h  ServerController.cpp  ServerController.h  WebPanelController.cpp  WebPanelController.h
MCDeploy/src/models/: Database.cpp  Database.h
MCDeploy/src/utils/: AppPaths.cpp  AppPaths.h  BrowserWindow.cpp  BrowserWindow.h  CronParser.h  DnsManager.cpp  DnsManager.h  MinecraftLogParser.h  ObfuscatedStrings.h  ProcessManager.cpp  ProcessManager.h  Scheduler.cpp  Scheduler.h  ServerLifecycle.cpp  ServerLifecycle.h  SystemInfo.cpp  SystemInfo.h  TunnelManager.cpp  TunnelManager.h  VersionFetcher.cpp  VersionFetcher.h
WEBSITE/: .env.example  .env.production  .gitignore  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
WEBSITE/migrations/: 0001_initial.sql
WEBSITE/netlify/functions/: agent-commands.mjs  agent-enroll.mjs  agent-enrollment-code.mjs  agent-heartbeat.mjs  agent-results.mjs  agent-servers-sync.mjs  cleanup.mjs  dns-proxy.mjs  login.mjs  register-resend.mjs  register-verify.mjs  register.mjs  session.mjs  status.mjs  webpanel-command.mjs  webpanel-server.mjs  webpanel-servers.mjs
WEBSITE/netlify/lib/: agent-actions.mjs  auth.mjs  commands.mjs  crypto.mjs  db.mjs  email.mjs  http.mjs  permissions.mjs  rate-limit.mjs
WEBSITE/src/: App.jsx  main.jsx  styles.css
WEBSITE/src/api/: client.js
WEBSITE/src/auth/: AuthProvider.jsx  useAuth.js
WEBSITE/src/components/: Brand.jsx  ConnectionNotice.jsx  PanelHeader.jsx
WEBSITE/src/components/marketing/: AiShowcase.jsx  Features.jsx  Footer.jsx  Hero.jsx  Installation.jsx  Navbar.jsx  Operations.jsx
WEBSITE/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  ServerPanel.jsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/marketing/: Landing.jsx
installer/: MCDeploy.iss  README.md  build-installer.ps1
